--- a/views/AddNotes.ejs
+++ b/views/AddNotes.ejs
@@ -13,6 +13,7 @@
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label h3">Write</label><span class="h5"> your notes here</span>
         <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="12"></textarea>
+        <!-- <textarea name="body" class="form-control" id="editor"></textarea> -->
       </div>
       <div class="d-flex justify-content-end">
         <input type="submit" value="Submit" class="btn btn-primary ">
